change image of agent-assignment

--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -910,7 +910,7 @@ deployments:
         cpu: 125m
         memory: 64Mi
   - name: acd-agent-assignment
-    image: acd-agent-assignment
+    customImage: docker-registry.metechvn.com/dev/omicx-v2/acd-agent-assignment
     pullPolicy: Always
     tag: "latest"
     replicaCount: 1
