--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -859,7 +859,7 @@ deployments:
   - name: acd-backend
     customImage: docker-registry.metechvn.com/dev/omicx-v2/acd-backend
     pullPolicy: Always
-    tag: "dfcb69cb"
+    tag: 'ce53c30d'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 5
