--- a/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
+++ b/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
@@ -137,6 +137,11 @@ server                  {
                 resolver  kube-dns.kube-system.svc.cluster.local;
                 proxy_pass              http://omicx-call-connector-8080-service.omicx-v2-dev.svc.cluster.local:8080/webhook/call;
        }
+
+       location /workflow {
+                resolver  kube-dns.kube-system.svc.cluster.local;
+                proxy_pass              http://omicx-acd-workflow-8080-service.omicx-v2-dev.svc.cluster.local:8080/api/v1/workflows;
+       }
      
         location /api/v1/email/oauth2 {
                 resolver  kube-dns.kube-system.svc.cluster.local;
