Updates file values.yaml with 9230f37a in deployment: ticket-service

--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -1416,7 +1416,7 @@ deployments:
   - name: ticket-service
     customImage: docker-registry.metechvn.com/dev/omicx-v2/ticket-service
     pullPolicy: Always
-    tag: "latest"
+    tag: '9230f37a'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 5
