--- a/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
+++ b/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
@@ -86,6 +86,12 @@ server                  {
             #access_by_lua_file '/etc/nginx/conf.d/access.lua';
             proxy_pass              http://omicx-contact-service-8080-service.omicx-v2-dev.svc.cluster.local:8080/$1$is_args$args;
         }
+
+        location ~* ^/ticket/(.*)$ {
+            resolver  kube-dns.kube-system.svc.cluster.local;
+            #access_by_lua_file '/etc/nginx/conf.d/access.lua';
+            proxy_pass              http://omicx-ticket-service-8080-service.omicx-v2-dev.svc.cluster.local:8080/$1$is_args$args;
+        }
         
         location ~* ^/catalog/(.*)$ {
             resolver  kube-dns.kube-system.svc.cluster.local;
