--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -718,7 +718,7 @@ deployments:
   - name: frontend-v2
     customImage: docker-registry.metechvn.com/dev/omicx/frontend-v2
     pullPolicy: IfNotPresent
-    tag: "f0effd46"
+    tag: '28ad3ae1'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 30
