--- a/omicx/resources/nginx/crm-dev-v1.metechvn.com.conf
+++ b/omicx/resources/nginx/crm-dev-v1.metechvn.com.conf
@@ -1,12 +1,12 @@
 upstream web_back_host  {
-        server omicx-web-be-9701-service.omicx-v2-dev.svc.cluster.local:9701 weight=5;
+        server omicx-web-be-9701-service.omicx-v2-uat.svc.cluster.local:9701 weight=5;
 }
 
 upstream web_front_host {
-        server omicx-web-fe-80-service.omicx-v2-dev.svc.cluster.local:80 weight=5;
+        server omicx-web-fe-80-service.omicx-v2-uat.svc.cluster.local:80 weight=5;
 }
 upstream author_service_host  {
-        server omicx-authorization-service-21021-service.omicx-v2-dev.svc.cluster.local:21021 weight=5;
+        server omicx-authorization-service-21021-service.omicx-v2-uat.svc.cluster.local:21021 weight=5;
 }
 
 server                  {
@@ -63,7 +63,7 @@ server                  {
                 client_max_body_size 100M;
                 resolver  kube-dns.kube-system.svc.cluster.local;
                 #access_by_lua_file '/etc/nginx/conf.d/access.lua';
-                proxy_pass              http://omicx-campaign-planning-3000-service.omicx-v2-dev.svc.cluster.local:3000/campaign;
+                proxy_pass              http://omicx-campaign-planning-3000-service.omicx-v2-uat.svc.cluster.local:3000/campaign;
        }
 
       location /api {
@@ -86,26 +86,26 @@ server                  {
         location ~* ^/asm/(.*)$ {
             resolver  kube-dns.kube-system.svc.cluster.local;
             #access_by_lua_file '/etc/nginx/conf.d/access.lua';
-            proxy_pass              http://omicx-asm-3003-service.omicx-v2-dev.svc.cluster.local:3003/$1$is_args$args;
+            proxy_pass              http://omicx-asm-3003-service.omicx-v2-uat.svc.cluster.local:3003/$1$is_args$args;
         }
         
         location ~* ^/catalog/(.*)$ {
             resolver  kube-dns.kube-system.svc.cluster.local;
             #access_by_lua_file '/etc/nginx/conf.d/access.lua';
-            proxy_pass              http://omicx-product-catalog-3005-service.omicx-v2-dev.svc.cluster.local:3005/$1$is_args$args;
+            proxy_pass              http://omicx-product-catalog-3005-service.omicx-v2-uat.svc.cluster.local:3005/$1$is_args$args;
         }
         
         location ~* ^/tenant-registration/(.*)$ {
             resolver  kube-dns.kube-system.svc.cluster.local;
             #access_by_lua_file '/etc/nginx/conf.d/access.lua';
-            proxy_pass              http://omicx-tenant-registration-9755-service.omicx-v2-dev.svc.cluster.local:9755/$1$is_args$args;
+            proxy_pass              http://omicx-tenant-registration-9755-service.omicx-v2-uat.svc.cluster.local:9755/$1$is_args$args;
         }
 
         location ~* ^/fsapi/(.*)$ {
                 client_max_body_size 100M;
                 resolver  kube-dns.kube-system.svc.cluster.local;
                 #access_by_lua_file '/etc/nginx/conf.d/access.lua';
-                proxy_pass          http://omicx-cci-5580-service.omicx-v2-dev.svc.cluster.local:5580/$1$is_args$args;
+                proxy_pass          http://omicx-cci-5580-service.omicx-v2-uat.svc.cluster.local:5580/$1$is_args$args;
         }
 
         location ~* ^/file/(.*)$ {
@@ -116,49 +116,49 @@ server                  {
 
         location ~*     ^/channelgw/(.*)$ {
                 resolver  kube-dns.kube-system.svc.cluster.local;
-                proxy_pass              http://omicx-channel-gateway-6969-service.omicx-v2-dev.svc.cluster.local:6969/$1$is_args$args;
+                proxy_pass              http://omicx-channel-gateway-6969-service.omicx-v2-uat.svc.cluster.local:6969/$1$is_args$args;
         }
 
         #Redash
         location ~*     ^/jobcommon/(.*)$ {
                 resolver  kube-dns.kube-system.svc.cluster.local;
                 #access_by_lua_file '/etc/nginx/conf.d/access.lua';
-                proxy_pass              http://omicx-job-common-9703-service.omicx-v2-dev.svc.cluster.local:9703/$1$is_args$args;
+                proxy_pass              http://omicx-job-common-9703-service.omicx-v2-uat.svc.cluster.local:9703/$1$is_args$args;
         }
         location /zalo/webhook {
                 resolver  kube-dns.kube-system.svc.cluster.local;
-                proxy_pass              http://omicx-acd-zalo-connector-6969-service.omicx-v2-dev.svc.cluster.local:6969/webhook/zalo;
+                proxy_pass              http://omicx-acd-zalo-connector-6969-service.omicx-v2-uat.svc.cluster.local:6969/webhook/zalo;
         }
 
         location /facebook/webhook {
                 resolver  kube-dns.kube-system.svc.cluster.local;
-                proxy_pass              http://omicx-acd-facebook-connector-7979-service.omicx-v2-dev.svc.cluster.local:7979/webhook/facebook;
+                proxy_pass              http://omicx-acd-facebook-connector-7979-service.omicx-v2-uat.svc.cluster.local:7979/webhook/facebook;
        }
 
        location /call/webhook {
                 resolver  kube-dns.kube-system.svc.cluster.local;
-                proxy_pass              http://omicx-call-connector-8080-service.omicx-v2-dev.svc.cluster.local:8080/webhook/call;
+                proxy_pass              http://omicx-call-connector-8080-service.omicx-v2-uat.svc.cluster.local:8080/webhook/call;
        }
      
         location /api/v1/email/oauth2 {
                 resolver  kube-dns.kube-system.svc.cluster.local;
-                proxy_pass              http://omicx-social-configurations-7980-service.omicx-v2-dev.svc.cluster.local:7980;
+                proxy_pass              http://omicx-social-configurations-7980-service.omicx-v2-uat.svc.cluster.local:7980;
         }
         location /api/v1/realtime-chat/ {
         		resolver  kube-dns.kube-system.svc.cluster.local;
-                proxy_pass              http://omicx-chat-statistics-80-service.omicx-v2-dev.svc.cluster.local:80;
+                proxy_pass              http://omicx-chat-statistics-80-service.omicx-v2-uat.svc.cluster.local:80;
         }
        
        location ~*     ^/public/(.*)$ {
                 client_max_body_size 100M;
                 resolver  kube-dns.kube-system.svc.cluster.local;
-                proxy_pass http://omicx-cci-5580-service.omicx-v2-dev.svc.cluster.local:5580/public/$1;
+                proxy_pass http://omicx-cci-5580-service.omicx-v2-uat.svc.cluster.local:5580/public/$1;
         }
 
         location ~*     ^/static/(.*)$ {
         # point to mount folder at nfs.conf
                 resolver  kube-dns.kube-system.svc.cluster.local;
-                proxy_pass              http://omicx-nginx-7990-service.omicx-v2-dev.svc.cluster.local:7990/$1$is_args$args;
+                proxy_pass              http://omicx-nginx-7990-service.omicx-v2-uat.svc.cluster.local:7990/$1$is_args$args;
         }
         location     /api/tenant/register {
                 resolver  kube-dns.kube-system.svc.cluster.local;
@@ -172,7 +172,7 @@ server                  {
                proxy_set_header        Upgrade $http_upgrade;
                proxy_set_header        Connection "upgrade";
                #access_by_lua_file '/etc/nginx/conf.d/access.lua';
-               proxy_pass              http://omicx-acd-backend-3006-service.omicx-v2-dev.svc.cluster.local:3006/$1$is_args$args;
+               proxy_pass              http://omicx-acd-backend-3006-service.omicx-v2-uat.svc.cluster.local:3006/$1$is_args$args;
         }
      
         location ~*     ^/acd-asm-chat/(.*)$ {
@@ -183,7 +183,7 @@ server                  {
                proxy_set_header        Upgrade $http_upgrade;
                proxy_set_header        Connection "upgrade";
                #access_by_lua_file '/etc/nginx/conf.d/access.lua';
-               proxy_pass              http://omicx-acd-asm-chat-6970-service.omicx-v2-dev.svc.cluster.local:6970/$1$is_args$args;
+               proxy_pass              http://omicx-acd-asm-chat-6970-service.omicx-v2-uat.svc.cluster.local:6970/$1$is_args$args;
         }     
         location ~*     ^/acd-asm-email/(.*)$ {
                resolver  kube-dns.kube-system.svc.cluster.local;
@@ -193,7 +193,7 @@ server                  {
                proxy_set_header        Upgrade $http_upgrade;
                proxy_set_header        Connection "upgrade";
                #access_by_lua_file '/etc/nginx/conf.d/access.lua';
-               proxy_pass              http://omicx-acd-asm-email-7990-service.omicx-v2-dev.svc.cluster.local:7990/$1$is_args$args;
+               proxy_pass              http://omicx-acd-asm-email-7990-service.omicx-v2-uat.svc.cluster.local:7990/$1$is_args$args;
         }
         location ~*     ^/report/(.*)$ {
                resolver  kube-dns.kube-system.svc.cluster.local;
@@ -205,7 +205,7 @@ server                  {
                proxy_set_header        Upgrade $http_upgrade;
                proxy_set_header        Connection "upgrade";
                access_by_lua_file '/etc/nginx/conf.d/access.lua';
-               proxy_pass              http://omicx-autocall-report-80-service.omicx-v2-dev.svc.cluster.local:80/$1$is_args$args;
+               proxy_pass              http://omicx-autocall-report-80-service.omicx-v2-uat.svc.cluster.local:80/$1$is_args$args;
         }
         location ~*     ^/statistic/(.*)$ {
                resolver  kube-dns.kube-system.svc.cluster.local;
@@ -215,6 +215,6 @@ server                  {
                proxy_set_header        Upgrade $http_upgrade;
                proxy_set_header        Connection "upgrade";
                #access_by_lua_file '/etc/nginx/conf.d/access.lua';
-               proxy_pass              http://omicx-chat-statistics-80-service.omicx-v2-dev.svc.cluster.local:80/$1$is_args$args;
+               proxy_pass              http://omicx-chat-statistics-80-service.omicx-v2-uat.svc.cluster.local:80/$1$is_args$args;
         }
 }
